<resources>
    <string name="app_name">AdoptPet</string>
    <string name="splash_app_name">AdopsiPet</string>
    <string name="splash_tagline">Beri mereka rumah yang hangat</string>
    <string name="splash_favorite_content_desc">Menu favorit</string>
    <string name="splash_home_content_desc">Menu beranda</string>
    <string name="splash_pet_content_desc">Menu hewan</string>
    <string name="home_logo_content_desc">Logo AdoptPet</string>
    <string name="home_menu_content_desc">Menu aplikasi</string>
    <string name="home_search_content_desc">Ikon pencarian</string>
    <string name="home_subheading">Berikan rumah yang penuh kasih bagi mereka yang menanti kehangatan sebuah keluarga.</string>
    <string name="home_search_hint">Cari ras atau karakter…</string>
    <string name="home_category_all">Semua</string>
    <string name="home_category_cat">Kucing</string>
    <string name="home_category_dog">Anjing</string>
    <string name="pet_image_content_desc">Gambar pet</string>
    <string name="pet_placeholder_name">Nama Pet</string>
    <string name="pet_placeholder_fee">Rp 0</string>
    <string name="pet_placeholder_meta">Shelter • ⭐ 0.0</string>
    <string name="pet_placeholder_desc">Deskripsi pet</string>
    <string name="pet_detail_button">Ajukan Adopsi</string>
    <string name="dashboard_pet_milo_breed">PERSIA MEDIUM</string>
    <string name="dashboard_pet_bella_breed">GOLDEN RETRIEVER</string>
    <string name="dashboard_pet_snow_breed">HOLLAND LOP</string>
    <string name="dashboard_pet_luna_breed">DOMESTIC SHORT HAIR</string>
    <string name="dashboard_heading_main">Temukan Sahabat</string>
    <string name="dashboard_heading_accent">Sejati</string>
    <string name="dashboard_age_2_years">2 TAHUN</string>
    <string name="dashboard_age_5_months">5 BULAN</string>
    <string name="dashboard_age_1_year">1 TAHUN</string>
    <string name="dashboard_age_3_years">3 TAHUN</string>
    <string name="dashboard_gender_male">JANTAN</string>
    <string name="dashboard_gender_female">BETINA</string>
    <string name="dashboard_home_tab">HOME</string>
    <string name="dashboard_favorites_tab">FAVORITES</string>
    <string name="dashboard_profile_tab">PROFILE</string>
    <string name="dashboard_location_jakarta">Jakarta</string>
    <string name="dashboard_location_bandung">Bandung</string>
    <string name="dashboard_location_tangerang">Tangerang</string>
    <string name="dashboard_location_surabaya">Surabaya</string>
    <string name="dashboard_favorite_content_desc">Favorit</string>
    <string name="dashboard_home_content_desc">Home</string>
    <string name="dashboard_profile_content_desc">Profile</string>
    <string name="dashboard_location_content_desc">Lokasi</string>

    <string name="form_title_add">Tambah Pet</string>
    <string name="form_title_edit">Edit Pet</string>
    <string name="form_hint_name">Nama</string>
    <string name="form_hint_shelter">Shelter / Lokasi</string>
    <string name="form_hint_breed">Ras</string>
    <string name="form_hint_age">Usia (mis. 2 Tahun)</string>
    <string name="form_label_gender">Jenis Kelamin</string>
    <string name="form_gender_male">Jantan</string>
    <string name="form_gender_female">Betina</string>
    <string name="form_hint_fee">Biaya Adopsi (Rp)</string>
    <string name="form_hint_rating">Rating (0.0 – 5.0)</string>
    <string name="form_hint_description">Deskripsi</string>
    <string name="form_label_image">Gambar</string>
    <string name="form_btn_save">Simpan</string>
    <string name="form_error_required">Field wajib diisi</string>
    <string name="form_error_rating_range">Rating harus 0.0 – 5.0</string>
    <string name="form_saved">Data tersimpan</string>
    <string name="form_deleted">Data dihapus</string>

    <string name="main_fab_add_content_desc">Tambah pet baru</string>

    <string name="detail_menu_edit">Edit</string>
    <string name="detail_menu_delete">Hapus</string>
    <string name="detail_delete_title">Hapus Pet?</string>
    <string name="detail_delete_message">Data pet ini akan dihapus permanen dari database.</string>
    <string name="detail_delete_confirm">Hapus</string>
    <string name="detail_delete_cancel">Batal</string>
</resources>
