<?xml version="1.0" encoding="utf-8"?>
<androidx.core.widget.NestedScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/home_background"
    android:fillViewport="true">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:padding="@dimen/space_lg">

        <TextView
            android:id="@+id/tvFormTitle"
            style="@style/Text.H1"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/form_title_add" />

        <com.google.android.material.textfield.TextInputLayout
            style="@style/Form.TextInputLayout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/space_md"
            android:hint="@string/form_hint_name">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/etName"
                style="@style/Form.EditText"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="textCapWords|textPersonName" />
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            style="@style/Form.TextInputLayout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/space_md"
            android:hint="@string/form_hint_shelter">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/etShelter"
                style="@style/Form.EditText"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="textCapWords" />
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            style="@style/Form.TextInputLayout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/space_md"
            android:hint="@string/form_hint_breed">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/etBreed"
                style="@style/Form.EditText"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="textCapWords" />
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            style="@style/Form.TextInputLayout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/space_md"
            android:hint="@string/form_hint_age">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/etAge"
                style="@style/Form.EditText"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="text" />
        </com.google.android.material.textfield.TextInputLayout>

        <TextView
            style="@style/Form.Label"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/space_md"
            android:text="@string/form_label_gender" />

        <RadioGroup
            android:id="@+id/rgGender"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/space_xs"
            android:orientation="horizontal">

            <RadioButton
                android:id="@+id/rbMale"
                style="@style/Form.Radio"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:checked="true"
                android:text="@string/form_gender_male" />

            <RadioButton
                android:id="@+id/rbFemale"
                style="@style/Form.Radio"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/space_md"
                android:text="@string/form_gender_female" />
        </RadioGroup>

        <com.google.android.material.textfield.TextInputLayout
            style="@style/Form.TextInputLayout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/space_md"
            android:hint="@string/form_hint_fee">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/etFee"
                style="@style/Form.EditText"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="number" />
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            style="@style/Form.TextInputLayout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/space_md"
            android:hint="@string/form_hint_rating">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/etRating"
                style="@style/Form.EditText"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="numberDecimal" />
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            style="@style/Form.TextInputLayout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/space_md"
            android:hint="@string/form_hint_description">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/etDescription"
                style="@style/Form.EditText"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="top|start"
                android:inputType="textMultiLine|textCapSentences"
                android:minLines="3" />
        </com.google.android.material.textfield.TextInputLayout>

        <TextView
            style="@style/Form.Label"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/space_md"
            android:text="@string/form_label_image" />

        <Spinner
            android:id="@+id/spImage"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/space_xs"
            android:background="@color/home_card_surface"
            android:padding="12dp" />

        <ImageView
            android:id="@+id/imgPreview"
            android:layout_width="match_parent"
            android:layout_height="180dp"
            android:layout_marginTop="@dimen/space_md"
            android:contentDescription="@string/pet_image_content_desc"
            android:scaleType="centerCrop" />

        <com.google.android.material.button.MaterialButton
            android:id="@+id/btnSave"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/space_lg"
            android:text="@string/form_btn_save"
            android:textColor="@android:color/white"
            app:backgroundTint="@color/home_primary"
            app:cornerRadius="@dimen/radius_md" />

    </LinearLayout>
</androidx.core.widget.NestedScrollView>
