<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/splash_root"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/bg_splash">

    <LinearLayout
        android:id="@+id/content_group"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:gravity="center_horizontal"
        android:orientation="vertical"
        app:layout_constraintBottom_toTopOf="@+id/bottom_nav"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.43">

        <FrameLayout
            android:layout_width="167dp"
            android:layout_height="92dp"
            android:background="@drawable/logo_badge">
        </FrameLayout>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="18dp"
            android:fontFamily="sans-serif-black"
            android:letterSpacing="-0.02"
            android:text="@string/splash_app_name"
            android:textColor="@color/splash_primary"
            android:textSize="27sp" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:fontFamily="sans-serif-medium"
            android:gravity="center"
            android:text="@string/splash_tagline"
            android:textAlignment="center"
            android:textColor="@color/splash_secondary"
            android:textSize="11sp" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/bottom_nav"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="14dp"
        android:gravity="center"
        android:orientation="horizontal"
        app:layout_constraintBottom_toTopOf="@+id/progress_track"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent">

        <TextView
            android:layout_width="18dp"
            android:layout_height="18dp"
            android:layout_marginHorizontal="14dp"
            android:background="@drawable/bg_placeholder_icon"
            android:contentDescription="@string/splash_favorite_content_desc"
            android:gravity="center"
            android:text="1"
            android:textColor="@color/splash_secondary"
            android:textSize="9sp" />

        <TextView
            android:layout_width="18dp"
            android:layout_height="18dp"
            android:layout_marginHorizontal="14dp"
            android:background="@drawable/bg_placeholder_icon"
            android:contentDescription="@string/splash_home_content_desc"
            android:gravity="center"
            android:text="2"
            android:textColor="@color/splash_secondary"
            android:textSize="9sp" />

        <TextView
            android:layout_width="18dp"
            android:layout_height="18dp"
            android:layout_marginHorizontal="14dp"
            android:background="@drawable/bg_placeholder_icon"
            android:contentDescription="@string/splash_pet_content_desc"
            android:gravity="center"
            android:text="3"
            android:textColor="@color/splash_secondary"
            android:textSize="9sp" />
    </LinearLayout>

    <View
        android:id="@+id/progress_track"
        android:layout_width="164dp"
        android:layout_height="6dp"
        android:layout_marginBottom="78dp"
        android:background="@drawable/bg_progress_track"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <View
        android:layout_width="54dp"
        android:layout_height="6dp"
        android:background="@drawable/bg_progress_fill"
        app:layout_constraintBottom_toBottomOf="@id/progress_track"
        app:layout_constraintStart_toStartOf="@id/progress_track"
        app:layout_constraintTop_toTopOf="@id/progress_track" />

</androidx.constraintlayout.widget.ConstraintLayout>
